resources/deployments.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: changedetection-io
  labels:
    app.kubernetes.io/instance: changedetection-io
    app.kubernetes.io/name: changedetection-io
spec:
  revisionHistoryLimit: 3
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: changedetection-io
      app.kubernetes.io/instance: changedetection-io
  template:
    metadata:
      labels:
        app.kubernetes.io/name: changedetection-io
        app.kubernetes.io/instance: changedetection-io
    spec:
      serviceAccountName: default
      automountServiceAccountToken: true
      dnsPolicy: ClusterFirst
      enableServiceLinks: true
      terminationGracePeriodSeconds: 0
      containers:
        - name: changedetection-io
          image: ghcr.io/dgtlmoon/changedetection.io:0.60.8
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 5000
              protocol: TCP
          volumeMounts:
            - name: data
              mountPath: /datastore
          livenessProbe:
            failureThreshold: 3
            initialDelaySeconds: 0
            periodSeconds: 10
            tcpSocket:
              port: 5000
            timeoutSeconds: 1
          readinessProbe:
            failureThreshold: 3
            initialDelaySeconds: 0
            periodSeconds: 10
            tcpSocket:
              port: 5000
            timeoutSeconds: 1
          startupProbe:
            failureThreshold: 30
            initialDelaySeconds: 0
            periodSeconds: 5
            tcpSocket:
              port: 5000
            timeoutSeconds: 1
        - env:
            - name: DEFAULT_BLOCK_ADS
              value: "true"
            - name: DEFAULT_STEALTH
              value: "true"
            - name: ENABLE_DEBUGGER
              value: "false"
          image: ghcr.io/browserless/chromium:v2.57.0
          name: browserless
          ports:
            - containerPort: 3000
              name: browserless
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: changedetection-io-data
