resources/services.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: changedetection-io
  labels:
    app.kubernetes.io/instance: changedetection-io
    app.kubernetes.io/name: changedetection-io
  annotations:
spec:
  type: ClusterIP
  ports:
    - port: 5000
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/instance: changedetection-io
    app.kubernetes.io/name: changedetection-io
